tests/ui/typeck/typeck-default-trait-impl-assoc-type.stderr
error[E0277]: `<T as Trait>::AssocType` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-assoc-type.rs:11:15
   |
LL |     is_send::<T::AssocType>();
   |               ^^^^^^^^^^^^ `<T as Trait>::AssocType` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `<T as Trait>::AssocType`
note: required by a bound in `is_send`
  --> $DIR/typeck-default-trait-impl-assoc-type.rs:14:14
   |
LL | fn is_send<T:Send>() {
   |              ^^^^ required by this bound in `is_send`
help: consider further restricting the associated type
   |
LL | fn bar<T:Trait+Send>() where <T as Trait>::AssocType: Send {
   |                        +++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
